manifests-successful/wallarm-sidecar-4.10.6.tgz-manifest.yaml
---
# Source: wallarm-sidecar/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-wallarm-sidecar-controller
  annotations:
    
  labels:
    app.kubernetes.io/name: wallarm-sidecar
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/app: wallarm-sidecar
    app.kubernetes.io/version: "4.10.6-1"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: controller
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wallarm-sidecar
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: controller
  ports:
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
    appProtocol: https
---
# Source: wallarm-sidecar/templates/postanalytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-wallarm-sidecar-postanalytics
  annotations:
    
  labels:
    app.kubernetes.io/name: wallarm-sidecar
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/app: wallarm-sidecar
    app.kubernetes.io/version: "4.10.6-1"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: postanalytics
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wallarm-sidecar
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: postanalytics
  ports:
  - name: tarantool
    port: 3313
    targetPort: tarantool
    protocol: TCP
---
# Source: wallarm-sidecar/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-wallarm-sidecar-controller
  annotations:
    
  labels:
    app.kubernetes.io/name: wallarm-sidecar
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/app: wallarm-sidecar
    app.kubernetes.io/version: "4.10.6-1"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: wallarm-sidecar
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: controller
  template:
    metadata:
      annotations:
        checksum/config: 5555a92e13643339dbcc92168b9e6b22b6fc37d0a59a46cf27f7cd7a7de1448f
        
      labels:
        app.kubernetes.io/name: wallarm-sidecar
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/component: controller
    spec:
      serviceAccountName: my-release-wallarm-sidecar-controller
      terminationGracePeriodSeconds: 30
      containers:
        - name: controller
          image: docker.io/wallarm/sidecar-controller:1.3.7
          imagePullPolicy: "IfNotPresent"
          args:
          - --listen=:8443
          - --template=/etc/controller/template.yaml.tpl
          - --config=/etc/controller/config.yaml
          - --tls-cert-file=/etc/controller/tls/tls.crt
          - --tls-key-file=/etc/controller/tls/tls.key
          - --log-level=info
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe: 
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe: 
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            privileged: false
            capabilities:
              drop:
              - ALL
          volumeMounts:
            - name: config
              mountPath: /etc/controller/config.yaml
              subPath: config.yaml
            - name: tls
              mountPath: /etc/controller/tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: my-release-wallarm-sidecar-admission-tls
        - name: config
          configMap:
            name: my-release-wallarm-sidecar-controller
---
# Source: wallarm-sidecar/templates/postanalytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-wallarm-sidecar-postanalytics
  annotations:
    
  labels:
    app.kubernetes.io/name: wallarm-sidecar
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/app: wallarm-sidecar
    app.kubernetes.io/version: "4.10.6-1"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: postanalytics
spec:
  replicas: 1
  strategy: 
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: wallarm-sidecar
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: postanalytics
  template:
    metadata:
      annotations:
        checksum/config: 04738a7213465a5b1f8b13608c86cb9e492b2ccde3cd7f44afe2fac3eb9bd212
        checksum/secret: ebe6808559fa8ffa825d3bfcc40d120b5a7d699ac72bd6d9f600cef2026bc9c2
        
      labels:
        app.kubernetes.io/name: wallarm-sidecar
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/component: postanalytics
    spec:
      serviceAccountName: my-release-wallarm-sidecar-postanalytics
      terminationGracePeriodSeconds: 30
      containers:
        - name: supervisord
          image: docker.io/wallarm/node-helpers:4.10.6-1
          imagePullPolicy: "IfNotPresent"
          args: ["supervisord"]
          securityContext:
            privileged: false
            runAsUser: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          volumeMounts:
          - mountPath: /opt/wallarm/etc/wallarm
            name: wallarm
          - mountPath: /opt/wallarm/var/lib/wallarm-acl
            name: wallarm-acl
          - mountPath: /opt/supervisord/supervisord.conf
            name: wallarm-supervisord
            subPath: supervisord.conf
            readOnly: true
        - name: tarantool
          image: docker.io/wallarm/node-helpers:4.10.6-1
          imagePullPolicy: "IfNotPresent"
          args: ["tarantool"]
          ports:
            - name: tarantool
              containerPort: 3313
              protocol: TCP
          livenessProbe: 
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3313
            timeoutSeconds: 1
          securityContext:
            privileged: false
            runAsUser: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
        - name: appstructure
          image: docker.io/wallarm/node-helpers:4.10.6-1
          imagePullPolicy: "IfNotPresent"
          args: ["appstructure"]
          securityContext:
            privileged: false
            runAsUser: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          volumeMounts:
          - mountPath: /opt/wallarm/etc/wallarm
            name: wallarm
        - name: antibot
          image: docker.io/wallarm/node-helpers:4.10.6-1
          imagePullPolicy: "IfNotPresent"
          args: ["antibot"]
          securityContext:
            privileged: false
            runAsUser: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          volumeMounts:
          - mountPath: /opt/wallarm/etc/wallarm
            name: wallarm
      volumes:
        - name: wallarm
          emptyDir: {}
        - name: wallarm-acl
          emptyDir: {}
        - name: wallarm-supervisord
          configMap:
            name: my-release-wallarm-sidecar-postanalytics
---
# Source: wallarm-sidecar/templates/controller-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-wallarm-sidecar
  annotations:
    helm.sh/hook: pre-install
    helm.sh/resource-policy: keep
    helm.sh/hook-delete-policy: before-hook-creation
    
  labels:
    app.kubernetes.io/name: wallarm-sidecar
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/app: wallarm-sidecar
    app.kubernetes.io/version: "4.10.6-1"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: admission-webhook
webhooks:
  - name: injector.sidecar.wallarm.io
    admissionReviewVersions: ["v1"]
    matchPolicy: Equivalent
    rules:
      - apiGroups: ["*"]
        apiVersions: ["v1"]
        operations:
          - CREATE
        resources:
          - pods
    objectSelector:
      matchLabels:
        wallarm-sidecar: enabled
    failurePolicy: Fail
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRVENDQWltZ0F3SUJBZ0lRQ2cvRzdkOU5JV0RSRFR1bTh3bU11akFOQmdrcWhraUc5dzBCQVFzRkFEQXIKTVNrd0p3WURWUVFERENBcUxuZGhiR3hoY20wdGMybGtaV05oY2kwMExqRXdMall1ZEdkNkxuTjJZekFlRncweQpOREEyTWpBeE5EVTVNRGRhRncwek5EQTJNVGd4TkRVNU1EZGFNQ3N4S1RBbkJnTlZCQU1NSUNvdWQyRnNiR0Z5CmJTMXphV1JsWTJGeUxUUXVNVEF1Tmk1MFozb3VjM1pqTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEEKTUlJQkNnS0NBUUVBMUFwM01zaXBsWGwxMGhWRVQzeE0rU0s4YW03R2NVd0NOR2pjZFRqMmNwcVROMUpmQmRaMgpUTkxwcnVFdXJN [...]
      service:
        namespace: "wallarm-sidecar-4.10.6.tgz"
        name: my-release-wallarm-sidecar-controller
        port: 443
        path: "/inject"
    sideEffects: None
